# kafka_client_cpp

./: CMakeLists.txt
common/: utils.cpp  utils.h
common/lib/: libglog.so.0.6.0  librdkafka++.so.1
consumer/: CMakeLists.txt  main.cpp
consumer/src/: consumer.cpp  http.cpp
producer/: CMakeLists.txt  main.cpp
producer/src/: producer.cpp
